--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,12 +24,16 @@
   <div class="container mt-5">
     <h1>Meus Contatos</h1>
     <br>
-        <div class="list-group" id="list">
-        </div>
-    <a class="btn-floating btn-large black float-right mt-5" onclick="window.location.replace('contact')"><i class="large material-icons">add</i></a>
+    <div id="alert">
+    </div>
+    <div class="list-group" id="list">
+    </div>
+    <a class="btn-floating btn-large black float-right mt-5" onclick="window.location.replace('contact/-1')"><i class="large material-icons">add</i></a>
   </div>
 
   <script src="js/index.js">
+  </script>
+  <script src="js/contact.js">
   </script>
 </body>
 
