Using Spring Security

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -37,20 +37,20 @@
         <br>
         <div class="input-field col s6">
             <i class="material-icons prefix">account_circle</i>
-            <input id="contactName" type="text" class="validate">
+            <input id="contactName" type="text" class="validate" required="true">
             <label for="contactName" id="labelName">Nome</label>
         </div>
 
         <div class="input-field col s6">
             <i class="material-icons prefix">email</i>
             <input id="contactEmail" type="email" class="validate">
-            <label for="contactEmail" id="labelEmail">Email</label>
+            <label for="contactEmail" id="labelEmail">E-mail</label>
         </div>
 
 
         <div class="input-field col s6">
             <i class="material-icons prefix">phone</i>
-            <input id="contactPhoneNumber" type="text" class="validate">
+            <input id="contactPhoneNumber" type="text" class="validate" required="true">
             <label for="contactPhoneNumber" id="labelPhoneNumber">Telefone</label>
         </div>
 
