--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -20,9 +20,9 @@
     <script src="/lib/materialize/js/materialize.min.js"></script>
 </head>
 
-<body onload="extractContactId()">
+<body class="bg-dark" onload="extractContactId()">
 <div class="container">
-    <i class="half material-icons" style="cursor: pointer;" onclick="window.location.replace('../../')">arrow_back</i>
+    <i class="half text-white material-icons" style="cursor: pointer;" onclick="window.location.replace('../../')">arrow_back</i>
 <div class="jumbotron mt-5">
 
 
