--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <script src="lib/materialize/js/materialize.min.js"></script>
 </head>
 
-<body onload="get()">
+<body class="bg-dark text-white" onload="get()">
   <div class="container mt-5">
     <h1>Meus Contatos</h1>
     <br>
@@ -28,7 +28,7 @@
     </div>
     <div class="list-group" id="list">
     </div>
-    <a class="btn-floating btn-large black float-right mt-5" onclick="window.location.replace('contact/-1')"><i class="large material-icons">add</i></a>
+    <a class="btn-floating btn-large black float-right mt-5" onclick="window.location.replace('contact/-1')"><i class="large material-icons text-white">add</i></a>
   </div>
 
   <script src="js/index.js">
